TA-457 Simplify contract status change API
* All endpoint that were there to change to particular status were changed to single one, where status is passed in the body. In that way integrating apps, and fronted do not have to know what flow of the statuses is, and what endpoint should be called in particular situation.
