# core/src/main/resources/openapi/openapi-spec.yml
@@ -308,214 +308,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApplicationConfiguration"
 
-
-  /contracts/{contractId}/reject:
+  /contracts/{contractId}/status:
     post:
       tags:
         - contract
-      summary: Reject contract offer
-      operationId: rejectOffer
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: Contract rejected
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/new-offer:
-    post:
-      tags:
-        - contract
-      summary: Make a new offer
-      operationId: makeNewOffer
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        description: New offer for contract made
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Contract"
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/accept-offer:
-    post:
-      tags:
-        - contract
-      summary: Accepts contract offer
-      operationId: acceptOffer
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: Offer for the contract accepted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/sign:
-    post:
-      tags:
-        - contract
-      summary: Sign the contract
-      operationId: sign
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        description: Data of contract to sign
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Contract"
-      responses:
-        200:
-          description: Contract signed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/terminate:
-    post:
-      tags:
-        - contract
-      summary: Terminate the contract
-      operationId: terminate
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        description: Data of contract to terminate
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Contract"
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/resume:
-    post:
-      tags:
-        - contract
-      summary: Resume the contract
-      operationId: resume
-      parameters:
-        - name: contractId
-          in: path
-          description: "A unique identifier of the contract"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Contract"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /contracts/{contractId}/complete:
-    post:
-      tags:
-        - contract
-      summary: Complete the contract
-      operationId: complete
+      summary: Change contract status
+      operationId: changeStatus
       parameters:
         - name: contractId
           in: path
